# ActionDesignModel

./: CMakeLists.txt
command/: Command.cpp  Command.h  Invoker.cpp  Invoker.h  Receiver.cpp  Receiver.h  main.cpp
interpreter/: Context.cpp  Context.h  Interpreter.cpp  Interpreter.h  main.cpp
iterator/: Aggregate.cpp  Aggregate.h  Iterator.cpp  Iterator.h  main.cpp
mediator/: Colleage.cpp  Colleage.h  Mediator.cpp  Mediator.h  main.cpp
memento/: Memento.cpp  Memento.h  main.cpp
observer/: Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
responsibility/: Handle.cpp  Handle.h  main.cpp
state/: Context.cpp  Context.h  State.cpp  State.h  main.cpp
strategy/: Context.cpp  Context.h  Strategy.cpp  Strategy.h  main.cpp
template/: Template.cpp  Template.h  main.cpp
visitor/: Element.cpp  Element.h  Visitor.cpp  Visitor.h  main.cpp
